<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.example</groupId>
  <artifactId>parallelTest</artifactId>
  <version>1.0-SNAPSHOT</version>
  <name>Archetype - parallelTest</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <selenium.version>4.11.0</selenium.version>
    <cucumber.version>7.11.1</cucumber.version>
    <junit.version>4.13.2</junit.version>
    <webdrivermanager.version>5.3.2</webdrivermanager.version>
    <extent.version>5.0.9</extent.version>
    <extent.cucumber.adapter.version>1.10.1</extent.cucumber.adapter.version>
    <extentreports.cucumber7.adapter.version>1.14.0</extentreports.cucumber7.adapter.version>
    <maven.compiler.plugin.version>3.10.1</maven.compiler.plugin.version>
    <maven.surefire.plugin.version>3.0.0-M7</maven.surefire.plugin.version>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <!--Config report -->
    <maven.cucumber.reporting.version>5.7.4</maven.cucumber.reporting.version>
  </properties>


  <dependencies>
    <!--Cucumber Dependencies -->
    <dependency>
      <groupId>io.cucumber</groupId>
      <artifactId>cucumber-java</artifactId>
      <version>${cucumber.version}</version>
    </dependency>

    <dependency>
      <groupId>io.cucumber</groupId>
      <artifactId>cucumber-junit</artifactId>
      <version>${cucumber.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.18.24</version>
      <scope>provided</scope>
    </dependency>
    <!-- Selenium Dependency -->
    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-java</artifactId>
      <version>${selenium.version}</version>
    </dependency>

    <!-- JUnit4 Dependency -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>


    <dependency>
      <groupId>io.cucumber</groupId>
      <artifactId>cucumber-picocontainer</artifactId>
      <version>${cucumber.version}</version>
      <scope>test</scope>
    </dependency>

    <!-- WebDriver Manager Dependency -->


    <!-- coonfig report -->

    <dependency>
      <groupId>com.aventstack</groupId>
      <artifactId>extentreports</artifactId>
      <version>${extent.version}</version>
    </dependency>
    <dependency>
      <groupId>tech.grasshopper</groupId>
      <artifactId>extentreports-cucumber7-adapter</artifactId>
      <version>1.14.0</version>
      <scope>test</scope>
    </dependency>


  </dependencies>
  <build>
    <plugins>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven.compiler.plugin.version}</version>
        <configuration>
          <source>${maven.compiler.source}</source>
          <target>${maven.compiler.target}</target>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven.surefire.plugin.version}</version>
        <configuration>
          <parallel>methods</parallel>
          <useUnlimitedThreads>true</useUnlimitedThreads>
          <testFailureIgnore>true</testFailureIgnore>
          <argLine>--add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
        </configuration>

      </plugin>

      <!-- coonfig report -->

<!--      <plugin>-->
<!--        <groupId>net.masterthought</groupId>-->
<!--        <artifactId>maven-cucumber-reporting</artifactId>-->
<!--        <version>${maven.cucumber.reporting.version}</version>-->

<!--        <executions>-->
<!--          <execution>-->
<!--            <id>execution</id>-->
<!--            <phase>test</phase>-->
<!--            <goals>-->
<!--              <goal>generate</goal>-->
<!--            </goals>-->
<!--            <configuration>-->
<!--              <projectName>Cucumber Reporting Example With JUnit4</projectName>-->
<!--              &lt;!&ndash;              <outputDirectory>${project.build.directory}/cucumber-report-html</outputDirectory>&ndash;&gt;-->
<!--              &lt;!&ndash;              <inputDirectory>${project.build.directory}</inputDirectory>&ndash;&gt;-->
<!--              <outputDirectory>${project.build.directory}/cucumber-reports/cucumber-reporting</outputDirectory>-->
<!--              <inputDirectory>${project.build.directory}/cucumber-reports</inputDirectory>-->
<!--              <jsonFiles>-->
<!--                <param>**/*.json</param>-->
<!--              </jsonFiles>-->
<!--              <checkBuildResult>false</checkBuildResult>-->
<!--            </configuration>-->
<!--          </execution>-->
<!--        </executions>-->
<!--      </plugin>-->


    </plugins>

  </build>

</project>
